--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists the individuals who contributed content to the repository.
 
-Michael Onyeweke <>
+Michael Onyeweke <michaelonyeweke@yahoo.com>
 Precious Idubor <preciousidubor@gmail.com>
